Add home section

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <a href="#contact">KONTAKT</a>
 </nav>
 
+
+
 <section class="aboutUs" id="aboutUs">
     <div class="sectionContainer">
         <div class="sectionContainerInner">
@@ -148,6 +150,8 @@
                         Węglew ul. Mieszka I 22 <br/>
                         62-590 Golina<br/>
                         <br/>
+                        Dzialamy na terenie całej Polski i Europy - Poznan i Warszawa to nasze glowne lokalizacje <br />
+                        <br />
                         Tel: 730 934 999<br/>
                         e-mail : kevlar.detektyw@wp.pl<br/>
                         NIP 665-295-23-27<br/>
@@ -156,6 +160,17 @@
             </div>
         </div>
     </section>
+
+    <section class="home" id="home">
+            <div class="sectionContainer">
+                <div class="sectionContainerInner">
+                    <h1>Witamy na stronie agencji detektywicznej KEVLAR</h1>
+                    <section class="description">
+                            Partner/partnerka Cie zdradza? A moze pracownik Cie oszukuje i okrada ? Zadzwon do nas, a my to dla Ciebie sprawdzimy i przekazemy stosowne dowody.
+                    </section>
+                </div>
+            </div>
+        </section>
 
 <footer class="footer">
     <p>BIURO DETEKTYWISTYCZNE   <span>KEVLAR</span> </p>
